<resources>
    <string name="app_name">InstagramLite</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Title for activities -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_timeline">Timeline</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="title_activity_camera">Camera</string>
    <string name="title_activity_profile">Profile</string>


    <string name="title_timeline">Timeline</string>
    <string name="title_settings">Settings</string>

    <!-- Strings related bottom navigation view -->
    <string name="nav_timeline">Timeline</string>
    <string name="nav_camera">Camera</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_notifications">Notifications</string>

    <string name="post_content_desc">Lorem ipsum</string>
</resources>
