<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_timeline"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/nav_timeline" />
    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/nav_notifications"
        tools:icon="@drawable/ic_notifications_black_24dp" />
    <item
        android:id="@+id/nav_camera"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/nav_camera" />
    <item
        android:id="@+id/nav_profile"
        android:icon="?android:attr/alertDialogIcon"
        android:title="@string/nav_profile" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_settings" />
</menu>